tests/baselines/reference/ES5For-of29(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5For-of29.ts(1,13): error TS2339: Property 'x' does not exist on type 'Number'.
ES5For-of29.ts(1,23): error TS2339: Property 'y' does not exist on type 'Number'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5For-of29.ts (2 errors) ====
    for (const {x: a = 0, y: b = 1} of [2, 3]) {
                ~
!!! error TS2339: Property 'x' does not exist on type 'Number'.
                          ~
!!! error TS2339: Property 'y' does not exist on type 'Number'.
        a;
        b;
    }